--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,13 +29,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/afd.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.commons-lang3-3.14.0.jar=C:\\Users\\ayman\\OneDrive\\Bureau\\commons-lang3-3.14.0.jar
 file.reference.JTattoo-1.6.13.jar=C:\\Users\\ayman\\OneDrive\\Bureau\\JTattoo-1.6.13.jar
 file.reference.JTattoo-1.6.13.jar-1=C:\\Users\\ayman\\OneDrive\\Bureau\\Studies\\JTattoo-1.6.13.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JTattoo-1.6.13.jar}:\
-    ${file.reference.JTattoo-1.6.13.jar-1}
+    ${file.reference.JTattoo-1.6.13.jar-1}:\
+    ${file.reference.commons-lang3-3.14.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
